<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:hint="@string/total_amount_hint"
        android:elevation="20dp"
        android:inputType="numberDecimal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:autofillHints="$"/>

    <EditText
        android:id="@+id/percent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:hint="@string/tax_amount_hint"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:autofillHints="$"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintVertical_bias="0.014" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@color/text_view_back"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/to_pay"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/button"
        android:layout_width="257dp"
        android:layout_height="67dp"
        android:elevation="20dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.099" />

    <RadioGroup
        android:id="@+id/radioTip"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@color/radio_group_back"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_wrapBehaviorInParent="vertical_only">

            <RadioButton
                android:id="@+id/radioButtonAmount"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="177dp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButtonPercent"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="227dp" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@color/radio_group_back"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.079"
        app:layout_wrapBehaviorInParent="horizontal_only">

            <RadioButton
                android:id="@+id/radioButton0"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="177dp" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="227dp" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="279dp" />

            <RadioButton
                android:id="@+id/radioButton20"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="321dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>